[gd_scene load_steps=6 format=3 uid="uid://b1mj4osb4xfu7"]

[ext_resource type="Script" uid="uid://cql0yfebw8c4m" path="res://Classes/PlayerIcon/player_icon.gd" id="1_fq007"]
[ext_resource type="Theme" uid="uid://bseckuk4rs2ug" path="res://Art/Theme/QuestionBoxTheme.tres" id="1_n8evf"]
[ext_resource type="Script" uid="uid://luthqih2wcwp" path="res://Classes/LittleAdditions/ScaleableText/scaleable_textl.gd" id="2_xaoci"]
[ext_resource type="Theme" uid="uid://dpeodv265m7jd" path="res://Art/Theme/QuestionTileTheme.tres" id="3_aaxg1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xaoci"]
bg_color = Color(0.027451, 0.0705882, 0.388235, 1)
border_width_left = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0253638, 0.0253638, 0.0253638, 1)
corner_radius_bottom_right = 5000
corner_radius_bottom_left = 5000

[node name="PlayerIcon" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_fq007")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 2.4284

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="namePanel" type="Panel" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_n8evf")

[node name="nameText" type="RichTextLabel" parent="AspectRatioContainer/VBoxContainer/namePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 158
text = "Test nameing"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_xaoci")
extraSpace = 0.8
metadata/_custom_type_script = "uid://luthqih2wcwp"

[node name="scorePanel" type="Panel" parent="AspectRatioContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_xaoci")

[node name="scoreText" type="RichTextLabel" parent="AspectRatioContainer/VBoxContainer/scorePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_aaxg1")
theme_override_font_sizes/normal_font_size = 137
theme_override_font_sizes/bold_font_size = 135
bbcode_enabled = true
text = "[b]$5000"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_xaoci")
fontType = "bold_font"
extraSpace = 0.7
metadata/_custom_type_script = "uid://luthqih2wcwp"

[connection signal="resized" from="AspectRatioContainer/VBoxContainer/namePanel/nameText" to="AspectRatioContainer/VBoxContainer/namePanel/nameText" method="_on_resized"]
[connection signal="resized" from="AspectRatioContainer/VBoxContainer/scorePanel/scoreText" to="AspectRatioContainer/VBoxContainer/scorePanel/scoreText" method="_on_resized"]
